import { mount } from "@vue/test-utils";
import { describe, it, expect, beforeEach, vi, afterEach } from "vitest";
import WebVitalsDashboard from "./WebVitalsDashboard.vue";
import { createI18n } from "vue-i18n";

// Mock child components and services
vi.mock("@/views/Dashboards/RenderDashboardCharts.vue", () => ({
  default: {
    name: "RenderDashboardCharts",
    template: '<div class="render-dashboard-charts-mock"><slot /></div>',
    props: ["viewOnly", "dashboardData", "currentTimeObj", "searchType"],
    methods: {
      layoutUpdate: vi.fn()
    }
  }
}));

vi.mock("@/utils/rum/web_vitals.json", () => ({
  default: {
    title: "Web Vitals Dashboard",
    panels: [],
    variables: { list: [] }
  }
}));

vi.mock("../../../utils/dashboard/convertDashboardSchemaVersion", () => ({
  convertDashboardSchemaVersion: vi.fn((data) => data)
}));

vi.mock("@/utils/commons.ts", () => ({
  getConsumableDateTime: vi.fn(),
  getDashboard: vi.fn()
}));

vi.mock("@/utils/date", () => ({
  parseDuration: vi.fn(),
  generateDurationLabel: vi.fn(),
  getDurationObjectFromParams: vi.fn(),
  getQueryParamsForDuration: vi.fn()
}));

// Mock Vue Router
const mockRouterPush = vi.fn();
const mockRouterReplace = vi.fn();

vi.mock("vue-router", () => ({
  useRouter: () => ({
    push: mockRouterPush,
    replace: mockRouterReplace
  }),
  useRoute: () => ({
    query: {
      dashboard: "test-dashboard",
      folder: "test-folder",
      org_identifier: "test-org"
    }
  })
}));

// Mock Vuex store
const mockStore = {
  state: {
    selectedOrganization: {
      identifier: "test-org"
    },
    theme: "light"
  }
};

vi.mock("vuex", () => ({
  useStore: () => mockStore
}));

const i18n = createI18n({
  locale: "en",
  messages: {
    en: {
      rum: {
        learnWebVitalsLabel: "Learn about Web Vitals",
        clickHereLabel: "Click here"
      }
    }
  }
});

describe("WebVitalsDashboard", () => {
  let wrapper: any;
  
  const defaultProps = {
    dateTime: {
      startTime: 1234567890,
      endTime: 1234568000,
      relativeTimePeriod: "15m",
      valueType: "relative"
    }
  };

  const createWrapper = (props = {}) => {
    return mount(WebVitalsDashboard, {
      props: {
        ...defaultProps,
        ...props
      },
      global: {
        plugins: [i18n],
        stubs: {
          "q-page": {
            name: "q-page",
            template: '<div class="q-page"><slot /></div>',
            props: ["class"]
          },
          "q-icon": {
            name: "q-icon",
            template: '<div class="q-icon"></div>',
            props: ["name", "size", "class"]
          },
          "q-spinner-hourglass": {
            name: "q-spinner-hourglass",
            template: '<div class="q-spinner-hourglass"></div>',
            props: ["color", "size", "style"]
          },
          "RenderDashboardCharts": {
            name: "RenderDashboardCharts",
            template: '<div class="render-dashboard-charts-mock" data-test="render-dashboard-charts"><slot /></div>',
            props: ["viewOnly", "dashboardData", "currentTimeObj", "searchType"],
            methods: {
              layoutUpdate: vi.fn()
            }
          }
        }
      }
    });
  };

  beforeEach(() => {
    vi.clearAllMocks();
    // Mock nextTick to resolve immediately
    vi.mock("vue", async () => {
      const actual = await vi.importActual("vue");
      return {
        ...actual,
        nextTick: vi.fn(() => Promise.resolve())
      };
    });
  });

  afterEach(() => {
    if (wrapper) {
      wrapper.unmount();
    }
  });

  describe("Component Initialization", () => {
    it("should render component with default props", () => {
      wrapper = createWrapper();
      expect(wrapper.exists()).toBe(true);
      expect(wrapper.vm).toBeTruthy();
    });

    it("should initialize with correct default props", () => {
      wrapper = createWrapper();
      expect(wrapper.vm.$props.dateTime).toEqual({
        startTime: 1234567890,
        endTime: 1234568000,
        relativeTimePeriod: "15m",
        valueType: "relative"
      });
    });

    it("should accept custom props", () => {
      const customProps = {
        dateTime: {
          startTime: 1609459200,
          endTime: 1609545600,
          relativeTimePeriod: "1h",
          valueType: "absolute"
        }
      };
      
      wrapper = createWrapper(customProps);
      expect(wrapper.vm.$props.dateTime).toEqual(customProps.dateTime);
    });

    it("should initialize reactive data correctly", () => {
      wrapper = createWrapper();
      expect(wrapper.vm.currentDashboardData).toBeTruthy();
      expect(wrapper.vm.currentDashboardData.data).toBeDefined();
      expect(wrapper.vm.viewOnly).toBe(true);
      expect(wrapper.vm.isLoading).toEqual([]);
      expect(wrapper.vm.eventLog).toEqual([]);
      expect(wrapper.vm.refreshInterval).toBe(0);
    });
  });

  describe("Template Rendering", () => {
    beforeEach(() => {
      wrapper = createWrapper();
    });

    it("should render main container with correct classes", () => {
      const mainContainer = wrapper.find(".performance-dashboard");
      expect(mainContainer.exists()).toBe(true);
    });

    it("should render web vitals info section", () => {
      const infoSection = wrapper.find(".learn-web-vitals-link");
      expect(infoSection.exists()).toBe(true);
    });

    it("should render info icon", () => {
      const icon = wrapper.findComponent({ name: "q-icon" });
      expect(icon.exists()).toBe(true);
    });

    it("should render external link to web.dev", () => {
      const externalLink = wrapper.find('a[href="https://web.dev/articles/vitals"]');
      expect(externalLink.exists()).toBe(true);
      expect(externalLink.attributes("target")).toBe("_blank");
    });

    it("should render RenderDashboardCharts component", () => {
      const renderComponent = wrapper.findComponent({ name: "RenderDashboardCharts" });
      expect(renderComponent.exists()).toBe(true);
    });

    it("should pass correct props to RenderDashboardCharts", () => {
      const renderComponent = wrapper.findComponent({ name: "RenderDashboardCharts" });
      const props = renderComponent.props();
      
      expect(props.viewOnly).toBe(true);
      expect(props.searchType).toBe("RUM");
      expect(props.currentTimeObj).toEqual(defaultProps.dateTime);
    });

    it("should show loading spinner when isLoading has items", async () => {
      wrapper.vm.isLoading = [true];
      await wrapper.vm.$nextTick();
      
      const loadingDiv = wrapper.find(".q-pb-lg.flex.items-center");
      expect(loadingDiv.exists()).toBe(true);
    });

    it("should hide dashboard when loading", async () => {
      wrapper.vm.isLoading = [true];
      await wrapper.vm.$nextTick();
      
      const dashboard = wrapper.find(".performance-dashboard");
      expect(dashboard.attributes("style")).toContain("visibility: hidden");
    });

    it("should show dashboard when not loading", async () => {
      wrapper.vm.isLoading = [];
      await wrapper.vm.$nextTick();
      
      const dashboard = wrapper.find(".performance-dashboard");
      expect(dashboard.attributes("style")).toContain("visibility: visible");
    });
  });

  describe("Dashboard Loading", () => {
    beforeEach(() => {
      wrapper = createWrapper();
    });

    it("should load dashboard data on mount", async () => {
      expect(wrapper.vm.currentDashboardData.data).toBeDefined();
      expect(wrapper.vm.loadDashboard).toBeInstanceOf(Function);
    });

    it("should handle dashboard schema conversion", async () => {
      await wrapper.vm.loadDashboard();
      expect(wrapper.vm.currentDashboardData.data).toBeTruthy();
    });

    it("should initialize variables data when no variables exist", async () => {
      // Set initial state with isVariablesLoading as true
      Object.assign(wrapper.vm.variablesData, { isVariablesLoading: true, values: null });
      wrapper.vm.currentDashboardData.data = { variables: null };
      
      await wrapper.vm.loadDashboard();
      
      expect(wrapper.vm.variablesData.isVariablesLoading).toBe(false);
      expect(wrapper.vm.variablesData.values).toEqual([]);
    });

    it("should not modify variables data when variables exist", async () => {
      // First clear any existing data and set the test data
      Object.keys(wrapper.vm.variablesData).forEach(key => {
        delete wrapper.vm.variablesData[key];
      });
      Object.assign(wrapper.vm.variablesData, { isVariablesLoading: true, values: ["existing"] });
      
      // Mock the convertDashboardSchemaVersion to return data with variables
      const mockConvert = vi.mocked(await import("../../../utils/dashboard/convertDashboardSchemaVersion"));
      mockConvert.convertDashboardSchemaVersion.mockReturnValue({
        variables: { list: [{ name: "var1" }] }
      });
      
      await wrapper.vm.loadDashboard();
      
      // When variables exist, loadDashboard should not modify variables data
      // The variables data should remain unchanged
      expect(wrapper.vm.variablesData.isVariablesLoading).toBe(true);
      expect(wrapper.vm.variablesData.values).toEqual(["existing"]);
    });
  });

  describe("Layout Management", () => {
    beforeEach(() => {
      wrapper = createWrapper();
      // Mock window.dispatchEvent
      vi.stubGlobal('window', {
        ...window,
        dispatchEvent: vi.fn()
      });
    });

    it("should have webVitalsChartsRef available", () => {
      expect(wrapper.vm.webVitalsChartsRef).toBeDefined();
      // webVitalsChartsRef is initially null but gets set by Vue's ref system
      expect(wrapper.vm.webVitalsChartsRef).toBeTruthy();
    });

    it("should be able to set webVitalsChartsRef", () => {
      const mockRef = { layoutUpdate: vi.fn() };
      wrapper.vm.webVitalsChartsRef = mockRef;
      expect(wrapper.vm.webVitalsChartsRef).toStrictEqual(mockRef);
    });
  });

  describe("Router Navigation", () => {
    beforeEach(() => {
      wrapper = createWrapper();
    });

    it("should navigate back to dashboard list", () => {
      wrapper.vm.goBackToDashboardList();
      
      expect(mockRouterPush).toHaveBeenCalledWith({
        path: "/dashboards",
        query: {
          dashboard: "test-dashboard",
          folder: "test-folder"
        }
      });
    });

    it("should navigate to add panel page", () => {
      wrapper.vm.addPanelData();
      
      expect(mockRouterPush).toHaveBeenCalledWith({
        path: "/dashboards/add_panel",
        query: {
          dashboard: "test-dashboard",
          folder: "test-folder"
        }
      });
    });

    it("should have router navigation methods available", () => {
      expect(typeof wrapper.vm.goBackToDashboardList).toBe('function');
      expect(typeof wrapper.vm.addPanelData).toBe('function');
    });

    it("should return router push result from navigation methods", () => {
      // Mock router push to return a promise
      mockRouterPush.mockReturnValue(Promise.resolve());
      
      const result1 = wrapper.vm.goBackToDashboardList();
      const result2 = wrapper.vm.addPanelData();
      expect(result1).toBeDefined();
      expect(result2).toBeDefined();
    });
  });

  describe("Variables Management", () => {
    beforeEach(() => {
      wrapper = createWrapper();
    });

    it("should update variables data when data changes", () => {
      const newData = { variable1: "value1", variable2: "value2" };
      // Clear initial variablesData
      Object.keys(wrapper.vm.variablesData).forEach(key => {
        delete wrapper.vm.variablesData[key];
      });
      Object.assign(wrapper.vm.variablesData, { old: "data" });
      
      wrapper.vm.variablesDataUpdated(newData);
      
      // Object.assign merges the data, so both old and new data should be present
      expect(wrapper.vm.variablesData).toEqual({
        old: "data",
        variable1: "value1", 
        variable2: "value2"
      });
    });

    it("should handle variables data updates", () => {
      const newData = { variable1: "value1" };
      wrapper.vm.variablesDataUpdated(newData);
      
      expect(wrapper.vm.variablesData.variable1).toBe("value1");
    });
  });

  describe("Settings Management", () => {
    beforeEach(() => {
      wrapper = createWrapper();
    });

    it("should show settings dialog when addSettingsData is called", () => {
      expect(wrapper.vm.showDashboardSettingsDialog).toBe(false);
      
      wrapper.vm.addSettingsData();
      
      expect(wrapper.vm.showDashboardSettingsDialog).toBe(true);
    });
  });

  describe("Filter Functionality", () => {
    beforeEach(() => {
      wrapper = createWrapper();
    });

    it("should filter rows by name containing search terms", () => {
      const rows = [
        { name: "Dashboard One" },
        { name: "Dashboard Two" },
        { name: "Report One" },
        { name: "DASHBOARD THREE" }
      ];
      
      const result = wrapper.vm.filterData(rows, "dashboard");
      
      expect(result).toHaveLength(3);
      expect(result[0].name).toBe("Dashboard One");
      expect(result[1].name).toBe("Dashboard Two");
      expect(result[2].name).toBe("DASHBOARD THREE");
    });

    it("should return empty array when no matches found", () => {
      const rows = [
        { name: "Dashboard One" },
        { name: "Dashboard Two" }
      ];
      
      const result = wrapper.vm.filterData(rows, "report");
      
      expect(result).toHaveLength(0);
    });

    it("should handle empty search terms", () => {
      const rows = [
        { name: "Dashboard One" },
        { name: "Dashboard Two" }
      ];
      
      const result = wrapper.vm.filterData(rows, "");
      
      expect(result).toHaveLength(2);
    });

    it("should handle case insensitive search", () => {
      const rows = [
        { name: "DASHBOARD ONE" },
        { name: "dashboard two" }
      ];
      
      const result = wrapper.vm.filterData(rows, "DashBoard");
      
      expect(result).toHaveLength(2);
    });
  });

  describe("Theme Integration", () => {
    it("should apply dark theme classes when theme is dark", () => {
      // Mock dark theme
      mockStore.state.theme = "dark";
      wrapper = createWrapper();
      
      const infoSection = wrapper.find(".learn-web-vitals-link");
      expect(infoSection.classes()).toContain("bg-indigo-7");
      
      const externalLink = wrapper.find('a[href="https://web.dev/articles/vitals"]');
      expect(externalLink.classes()).toContain("text-white");
    });

    it("should apply light theme classes when theme is light", () => {
      // Mock light theme
      mockStore.state.theme = "light";
      wrapper = createWrapper();
      
      const infoSection = wrapper.find(".learn-web-vitals-link");
      expect(infoSection.classes()).toContain("bg-indigo-2");
      
      const externalLink = wrapper.find('a[href="https://web.dev/articles/vitals"]');
      expect(externalLink.classes()).toContain("text-dark");
    });
  });

  describe("Props Validation", () => {
    it("should handle empty dateTime prop", () => {
      wrapper = createWrapper({ dateTime: {} });
      expect(wrapper.vm.$props.dateTime).toEqual({});
    });

    it("should use default props when not provided", () => {
      wrapper = createWrapper({ dateTime: undefined });
      expect(wrapper.vm.$props.dateTime).toEqual({});
    });
  });

  describe("Component Integration", () => {
    beforeEach(() => {
      wrapper = createWrapper();
    });

    it("should pass dashboard data to RenderDashboardCharts", () => {
      const renderComponent = wrapper.findComponent({ name: "RenderDashboardCharts" });
      const props = renderComponent.props();
      
      expect(props.dashboardData).toBe(wrapper.vm.currentDashboardData.data);
    });

    it("should pass current time object to RenderDashboardCharts", () => {
      const renderComponent = wrapper.findComponent({ name: "RenderDashboardCharts" });
      const props = renderComponent.props();
      
      expect(props.currentTimeObj).toEqual(defaultProps.dateTime);
    });

    it("should set search type to RUM for RenderDashboardCharts", () => {
      const renderComponent = wrapper.findComponent({ name: "RenderDashboardCharts" });
      const props = renderComponent.props();
      
      expect(props.searchType).toBe("RUM");
    });

    it("should set viewOnly to true for RenderDashboardCharts", () => {
      const renderComponent = wrapper.findComponent({ name: "RenderDashboardCharts" });
      const props = renderComponent.props();
      
      expect(props.viewOnly).toBe(true);
    });
  });
});